Fix: Logo-Pfad angepasst und assistify_logo.png in public/ verschoben

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MAIL_USER=assistify.auto@gmail.com
 MAIL_PASS=rqnz tbnt xxoc istg
 PORT=3000
-MONGO_URI=mongodb+srv://assistifybusiness_db_user:IJyHuQPSEh28aiy8@cluster0.ldewji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+mongodb://assistifybusiness_db_user:IJyHuQPSEh28aiy8@cluster0-shard-00-00.ldewji.mongodb.net:27017,cluster0-shard-00-01.ldewji.mongodb.net:27017,cluster0-shard-00-02.ldewji.mongodb.net:27017/?ssl=true&replicaSet=atlas-ldewji-shard-0&authSource=admin&retryWrites=true&w=majority
